--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,11 @@ body {
 }
 
 .nav-logo .logo-image {
-    height: 40px;
+    height: 32px;
     width: auto;
+    max-width: 180px;
     display: block;
+    object-fit: contain;
     transition: opacity var(--transition-fast);
 }
 
